--- a/react/package.json
+++ b/react/package.json
@@ -14,7 +14,8 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
-    "sass": "^1.71.1"
+    "sass": "^1.71.1",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
