environment.md, .env.development and .env.production updated

--- a/react/.env.development
+++ b/react/.env.development
@@ -1,5 +1,8 @@
-# Nome tutto in maiuscolo per le variabili di ambiente
-# Loro valore con o senza ""
+# Nome variabili di ambiente: tutto in maiuscolo
+# Valore variabili di ambiente: con o senza ""
 
 # Istruzione per non aprire il browser automaticamente quando si avvia l'applicazione, all'inserimento del comando 'npm start'
 BROWSER=none;
+
+# URL del server che useremo all'interno della propria applicazione
+REACT_APP_SERVER_URL=https.api.github.com
